Styling fixes (#30)
* Remove align: justify

* fix h5 closing tag in teasers

* Fix teaser heading height for mobile devices

* Fix page width and disable horizontal scroll, especially on smaller devices. Closes #25

* Justify text on <p>

* fix text align on teaser. Justify text on workshop details section.

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,13 +7,13 @@ body {
   font-weight: 300;
   font-family: 'Ubuntu', sans-serif;
   letter-spacing: 1px;
-  text-align: justify;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
 }
 
 p {
   color: #656565;
+  text-align: justify;
 }
 
 .title {
@@ -73,6 +73,7 @@ p {
       p {
         color: #fff;
         font-size: 14px;
+        text-align: center;
 
         span {
           display: inline-block;
@@ -87,7 +88,7 @@ p {
         a {
           color: #fff;
           display: block;
-          height: 3em;
+          @media (min-width: 768px) { height: 3em;}
         }
       }
     }
@@ -210,6 +211,7 @@ a.register {
       margin: 0;
       padding: 0;
       list-style-type: none;
+      text-align: justify;
 
       &.format {
         hr {
@@ -362,3 +364,11 @@ i:hover {
     }
   }
 }
+
+
+html, body {
+  /** Disable horizontal scroll on smaller devices **/
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
